# vulkan-triangle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  requirements.txt
.github/workflows/: vt-github-actions.yml
conan-profiles/: linux64-gcc  win64-clang  win64-msvc  wsl-linux-clang  wsl-win64-gcc
docker/linux/: .dockerignore  Dockerfile  vulkansdk-linux-x86_64-1.4.321.1.tar.xz
src/: CMakeLists.txt  hello_triangle_application.cpp  hello_triangle_application.hpp  main.c  main.cpp  utilities.hpp  vulkan_validation.hpp  window_main.cpp
src/shaders/cmake/: CompileShaders.cmake
